--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,22 +12,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '24'
 
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@v1
+      - uses: browser-actions/setup-chrome@v1
         with:
           chrome-version: stable
 
-      - name: Cache Maven
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
@@ -52,8 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Download allure-results
         uses: actions/download-artifact@v4
@@ -68,6 +63,9 @@ jobs:
           allure_report: ./allure-report
           keep_reports: 10
 
+      - name: List report files
+        run: ls -la ./allure-report | sed -n '1,80p'
+
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -75,3 +73,4 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./allure-report
           force_orphan: true
+          enable_jekyll: false
